delint